--- a/IPhone/style.css
+++ b/IPhone/style.css
@@ -28,6 +28,9 @@ h1, h4, h3 {
 .card .row {
     margin-left: 10%;
 }
+.card-content .row {
+    text-align: center;
+}
 .container .row img {
     transition: transform 0.3s;
 }
@@ -182,6 +185,7 @@ h1, h4, h3 {
 }
 .iphone-mac h4 {
     font-size: 28px;
+    text-align: center;
 }
 .iphone-mac p {
     font-size: 16px;
@@ -315,9 +319,7 @@ h1, h4, h3 {
     .credit-item {
         margin-bottom: 20px;
     }
-}/* ======================
-   MEDIA QUERIES TABLETTES
-   ====================== */
+}
 @media screen and (max-width: 992px) {
     nav img {
         width: 25px;
